2008-10-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/command/common.py:
	  Impot missing module.

2008-10-01  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/configurationassistant.py:
	* flumotion/admin/gtk/productionsteps.py:
	Improve documentation, add a couple of docstrings explaining
	the design and implementation of the configuration assistant.
	No code changes.

2008-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker_plug.py:
	  Change recording_started/_stopped to recordingStarted/Stopped to
	  conform to naming guidelines.

2008-09-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/command/common.py:
	  Add a method to connect to a manager.

2008-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/component.py:
	  Document a method and add some debugging.

2008-09-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_component_httpserver.py:
	* flumotion/test/test_comptest.py:
	* flumotion/test/test_manager_component.py:
	* flumotion/test/test_manager_manager.py:
	  Fix MRO.

2008-09-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/disker/disker.py:
	  Add some debugging to help fix a problem.

2008-09-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/testsuite.py:
	  Make all TestCase objects Loggable.

2008-09-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/scheduler.py:
	  Get more useful logging to debug problems.

2008-09-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	reviewed by: Arek Korbik

	* flumotion/component/combiners/switch/switch.py:
	Use pad monitors for the sink pads in switch to check for active or
	inactive eaters.